# enivicivokki

./: .gitignore  CMakeLists.txt  EnivicivokkiConfig.h.in  README.md  TutorialConfig.h.in  compile.sh  enivicivokki.cxx  tutorial.cxx
MathFunctions/: CMakeLists.txt  mysqrt.cxx
app/include/: TutorialConfig.h
packing/_CPack_Packages/enivicivokki/STGZ/: Enivicivokki-1.0.0-enivicivokki.sh
packing/_CPack_Packages/enivicivokki/TGZ/Enivicivokki-1.0.0-enivicivokki/include/: EnivicivokkiConfig.h  MathFunctions.h
